<resources>
    <string name="app_name">CheckUp!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="state_prompt">--</string>

    <string-array name="states">
        <item>NAIROBI</item>
        <item>MOMBASA</item>
        <item>KISUMU</item>
        <item>ELDORET</item>
        <item>NAKURU</item>
        <item>KISII</item>
        <item>KAKAMEGA</item>
        <item>BUSIA</item>
        <item>BUNGOMA</item>
        <item>NYERI</item>
        <item>TANA RIVER</item>
        <item>MALINDI</item>
        <item>MERU</item>
        <item>KITALE</item>
        <item>MACHAKOS</item>
        <item>EMBU</item>
        <item>BARINGO</item>
        <item>VIHIGA</item>
        <item>MIGORI</item>
        <item>HOMA BAY</item>
        <item>SIAYA</item>
        <item>LIMURU</item>
        <item>NANYUKI</item>
        <item>MARAKWET</item>
        <item>WAJIR</item>
        <item>NAROK</item>
        <item>MANDERA</item>

    </string-array>

        <string name="CheckUp">Form</string>
        <string name="fname">First Name</string>
        <string name="booking">Booking</string>
        <string name="sname">Second name</string>
        <string name="email">john@gmail.com</string>
        <string name="feedbackbutton">Send Details</string>

    <string-array name="specialists">
        <item>Acupuncturist</item>
        <item>Allergist</item>
        <item>Cardiologist</item>
        <item>Dentist</item>
        <item>Dermatologist</item>
        <item>Dietitian</item>
        <item>Ear Nose Throat Doctor</item>
        <item>Gastroenterologist</item>
        <item>General Practitioner</item>
        <item>Gynecologist</item>
        <item>Hepatologist</item>
        <item>Neurologist</item>
        <item>Nutritionist</item>
        <item>Psychiatrist</item>
        <item>Urologist</item>
    </string-array>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
