<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/booking1"
            android:layout_width = "382dp"
            android:layout_height = "wrap_content"
            android:text="@string/booking"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="27dp"
            android:layout_marginTop="12dp"
            />

        <EditText
            android:id="@+id/firstname"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:textAlignment="center"
            android:hint="@string/fname"
            android:inputType="text"
            android:layout_marginTop="18dp"/>
        <EditText
            android:id="@+id/sname"
            android:textAlignment="center"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:hint="@string/sname"
            android:inputType="text"
            android:layout_marginTop="12dp"/>
        <EditText
            android:id="@+id/email"
            android:textAlignment="center"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="12dp"/>
        <Button
            android:id="@+id/btnChangeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set Date"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Date (M-D-YYYY): "
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/dpResult"
            android:calendarTextColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton"
            android:onClick="sendBack"
            android:layout_width="fill_parent">
        </Button>


    </LinearLayout>
</ScrollView>